--- a/.config/i3/config
+++ b/.config/i3/config
@@ -35,8 +35,11 @@ bindsym $mod+Return exec st
 # kill focused window
 bindsym $mod+Shift+q kill
 
-# start dmenu (a program launcher)
-bindsym $mod+d exec dmenu-frecency
+# start rofi with aliases set up 
+# see:https://github.com/DaveDavenport/rofi/issues/97 
+bindsym $mod+d exec rofi -show run -run-list-command ". /bin/scripts/alias.sh" -run-command "/bin/zsh -i -c '{cmd}'" -rnow
+
+
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -218,7 +221,7 @@ bindsym $mod+o exec "slock"
 #}
 
 #compton stuff refer to ~/.config/compton.conf
-exec --no-startup-id compton
+exec compton -c -C -l 2 -r 10 -o 0.4 -b
 
 exec polybar autumn
 exec redshift -l 37.8136:144.9631 
@@ -236,5 +239,5 @@ exec mons -a
 exec ~/.fehbg #sets last wallpaper again
 exec wal --theme hybrid-material 
 
-exec xss-lock betterlockscreen -l
+exec --no-startup-id xss-lock -- betterlockscreen -l
 exec syncthing
